tests/0032-property-get-num.src.err
ERROR: Expected ';' but got 'foo'
 | 123.foo;
       ^
COMPILATION FAILED
